# phala-blockchain

./: Cargo.toml
crates/phactory/: Cargo.toml
crates/phactory/api/src/: blocks.rs  lib.rs
crates/phactory/src/: lib.rs
pallets/bridge_transfer/src/: lib.rs  mock.rs
scripts/js/: package.json
standalone/pruntime/enclave/: Cargo.toml  Enclave.config.dev.xml  Enclave.config.prod.xml
standalone/pruntime/enclave/src/: lib.rs  pal_sgx.rs
standalone/runtime/src/: lib.rs
