[workspace]

exclude = [
	"substrate",
	"subxt",
	"webpki",
	"ring",
	"native-nostd-hasher",
	"standalone/pruntime",
]

members = [
	"standalone/executor",
	"standalone/rpc",
	"standalone/node",
	"standalone/runtime",
	"standalone/pherry",
	"crates/phala-trie-storage",
	"crates/phala-mq",
	"crates/phala-crypto",
	"crates/phala-node-rpc-ext",
	"crates/phala-types",
	"crates/prpc",
	"crates/prpc-build",
	"crates/phactory",
	"crates/phactory/api",
	"crates/phactory/pal",
	"crates/pink",
	"pallets/phala",
	"pallets/phala/mq-runtime-api",
	"pallets/bridge",
	"scripts/toml-upgrade-version",
	"scripts/debug-cli"
]

resolver = "2"
